deployment/k8s-mail-daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mail-daemon-deployment
spec:
  selector:
    matchLabels:
      app: mail-daemon
  template:
    metadata:
      labels:
        app: mail-daemon
    spec:
      containers:
      - name: mail-daemon-container
        image: us-central1-docker.pkg.dev/basingo-abcall/basinglo-abcall-misw/email-daemon:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
