deployment/k8s-service.yml
# Despliegue de la base de datos PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1"
---
# Despliegue de la aplicación Auth
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: us-central1-docker.pkg.dev/basingo-abcall/basinglo-abcall-misw/auth:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "270m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /auth/health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /auth/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---
# Despliegue de la aplicación User
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: us-central1-docker.pkg.dev/basingo-abcall/basinglo-abcall-misw/user:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "270m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /user/health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /user/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---
# Despliegue de la aplicación Issues Management
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issues-management
  labels:
    app: issues-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issues-management
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: issues-management
    spec:
      containers:
        - name: issues-management
          image: us-central1-docker.pkg.dev/basingo-abcall/basinglo-abcall-misw/issues-management:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "270m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /issues_management/health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /issues_management/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

---
# Servicio para la base de datos PostgreSQL
kind: Service
apiVersion: v1
metadata:
  name: abcall-db
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
# Servicio para la aplicación Auth
kind: Service
apiVersion: v1
metadata:
  name: auth-service
spec:
  type: LoadBalancer
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
# Servicio para la aplicación User
kind: Service
apiVersion: v1
metadata:
  name: user-service
spec:
  type: LoadBalancer
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
# Servicio para la aplicación Issues Management
kind: Service
apiVersion: v1
metadata:
  name: issues-management-service
spec:
  type: LoadBalancer
  selector:
    app: issues-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
