deployment/k8s-ingress-deloyment.yaml
###################################
# INGRESS
###################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "abcall-cert"
    networking.gke.io/https-forwarding-rule: "true"
    networking.gke.io/redirect-http-to-https: "true"
    http://nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.abcall.lat
    http:
      paths:
      - pathType: Prefix
        path: /auth
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - pathType: Prefix
        path: /user
        backend:
          service:
            name: user-service
            port:
              number: 80
      - pathType: Prefix
        path: /company
        backend:
          service:
            name: user-service
            port:
              number: 80
      - pathType: Prefix
        path: /issues_management
        backend:
          service:
            name: issues-management-service
            port:
              number: 80
      - pathType: Prefix
        path: /ai
        backend:
          service:
            name: ai-service
            port:
              number: 80
    # Nueva regla para el frontend en abcall.lat
  - host: abcall.lat
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: angular-service
              port:
                number: 80
